--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,3 +20,8 @@ body {
   color: var(--foreground);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+footer {
+  position: fixed;
+  bottom: 0;
+}
